--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(student) do |f| %>
+<%= form_for (student) do |f| %>
+
 <% if student.errors.any?  %>
 <div id="error_explanation">
 <h2><%= pluralize(student.errors.count, "error") %>
@@ -10,9 +11,11 @@ prohibited this book from being saved:</h2>
 </ul>
 </div>
 <% end %>
+
 <div class= "field">
       <%= f.label :school%>
-      <%= f.text_field :school %>
+      <%= f.collection_select :school, School.order(:name),:name,:id %>
+
 </div>
 <div class = "field">
     <%= f.label :rollnumber %>
